fix overflow property
Former-commit-id: 8eb9536b11f40d2f8fd13c67c3e5b64ef9195818

--- a/workspace/src/app/wrappers/src/components/Typography/typography.scss
+++ b/workspace/src/app/wrappers/src/components/Typography/typography.scss
@@ -2,7 +2,7 @@
 // helpers
 
 .ecc-typography--nooverflow {
-    overflow: none;
+    overflow: hidden;
 }
 
 .ecc-typography--forcelinebreak {
